Fix pip installation

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -25,6 +25,7 @@
   pip:
     name: "{{ item }}"
     state: present
+    executable: pip    
   register: install_packages
   until: install_packages|success
   retries: 5
